--- a/app/src/main/assets/mapping.json
+++ b/app/src/main/assets/mapping.json
@@ -1,9 +1,18 @@
 {
-    "04AABBCCDD1122": "/storage/emulated/0/Download/pdf/history1.pdf",
-    "04FFEEDDCCBBAA": "/storage/emulated/0/Download/pdf/science2.pdf",
-    "MyCardName": "/storage/emulated/0/Download/pdf/math.pdf",
-    "04284FA7722681": "E_Book_7.pdf",
-    "CA451E61": "golang_full_exam.pdf",
-    "83351035": "7-Eleven.pdf",
-    "04D156A6722681": "7-Eleven.pdf"
+    "04003EFF8B61D180": "/storage/emulated/0/Download/pdf/E_Book_7.pdf",
+    "04B2E9FF8B61D180": "/storage/emulated/0/Download/pdf/7-Eleven.pdf",
+    "04E5F2FF8B61D180": "/storage/emulated/0/Download/pdf/golang_full_exam.pdf",
+    "04A1B3FF8B61D180": "/storage/emulated/0/Download/videos/sample_video.mp4",
+    "04C4D5FF8B61D180": "/storage/emulated/0/Download/videos/tutorial.mp4",
+    "04F6E7FF8B61D180": "https://www.google.com",
+    "04D8A9FF8B61D180": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+    "04EBBCFF8B61D180": "/storage/emulated/0/Download/pdf/history1.pdf",
+    "04FDCEFF8B61D180": "/storage/emulated/0/Download/videos/presentation.mp4",
+    "0412EFFF8B61D180": "https://github.com",
+    "0425F1FF8B61D180": "/storage/emulated/0/Download/pdf/science2.pdf",
+    "0438F3FF8B61D180": "/storage/emulated/0/Download/videos/demo.avi",
+    "044BF5FF8B61D180": "https://stackoverflow.com",
+    "045EF7FF8B61D180": "/storage/emulated/0/Download/pdf/math.pdf",
+    "0471F9FF8B61D180": "facebook.com",
+    "0484FBFF8B61D180": "https://www.example.com"
 } 
